challenge-1/deftgw-attach.tf
# File generated by aws2tf see https://github.com/awsandy/aws2tf
# aws_ec2_transit_gateway_vpc_attachment.tgw-attach-008c183cdff3e83ca:
resource "aws_ec2_transit_gateway_vpc_attachment" "deftgw-attach" {
  dns_support  = "enable"
  ipv6_support = "disable"
  subnet_ids = [
    data.aws_subnet.defsubnet.id,
  ]
  tags = {
    "Name" = "TGW-att-to-defvpc"
  }
  transit_gateway_default_route_table_association = true
  transit_gateway_default_route_table_propagation = true
  transit_gateway_id                              = data.aws_ec2_transit_gateway.mytgw.id
  vpc_id                                          = data.aws_vpc.dvpc.id
}
